--- a/PizzaShop/Views/Shared/_Layout.cshtml
+++ b/PizzaShop/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - PizzaShop</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <title>Pizza Shop</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> *@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PizzaShop.styles.css" asp-append-version="true" />
     <link href="~/css/bootstrap.min.css" rel="stylesheet" />
