--- a/PizzaShop/Views/Cart/Index.cshtml
+++ b/PizzaShop/Views/Cart/Index.cshtml
@@ -5,12 +5,13 @@
 }
 
 <div class="container mt-5">
-    <h2>Your Shopping Cart</h2>
+    <h2 class="">Your Shopping Cart</h2>
     @if (Model.CartDetails.Count > 0)
     {
-        <table class="table table-bordered">
-            <thead>
+        <table id="Cart_Items" class="table table-bordered">
+            <thead id="Cart_Items_Header">
                 <tr class="text-center">
+                    <th scope="col">Image</th>
                     <th scope="col">Item</th>
                     <th scope="col">Price</th>
                     <th scope="col">Quantity</th>
@@ -18,18 +19,28 @@
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="Cart_Items_Body">
                 @foreach (var item in Model.CartDetails)
                 {
-                    <tr class="text-center">
-                        <td>@item.Pizza.Name</td>
-                        <td>@item.Pizza.Price.ToString("C2")</td>
-                        <td>@item.Quantity</td>
-                        <td>@((item.UnitPrice * item.Quantity).ToString("C2"))</td>
+                    <tr class="text-center align-middle">
+                        <td id="Cart_Item_Image">
+                            @if (string.IsNullOrEmpty(item.Pizza.Image))
+                            {
+                                <img src="/css/images/sample-pizza.png" alt="Default" style="width:100px;height:100px" />
+                            }
+                            else
+                            {
+                                <img src="~/css/images/@item.Pizza.Image" alt="Pizza" style="width:100px;height:100px" />
+                            }
+                        </td>
+                        <td id="Cart_Item_Name">@item.Pizza.Name</td>
+                        <td id="Cart_Item_Price">@item.Pizza.Price.ToString("C2")</td>
+                        <td id="Cart_Item_Quantity">@item.Quantity</td>
+                        <td id="Total_Price">@((item.UnitPrice * item.Quantity).ToString("C2"))</td>
                         <td class="text-center">
-                            <a class="btn btn-outline-danger" href="/Cart/RemoveItem?cartItemId=@item.PizzaId">-</a>
+                            <a id="Decrease_Button" class="btn btn-outline-danger" href="/Cart/RemoveItem?cartItemId=@item.PizzaId">-</a>
                             <span id="quantity-@item.Id">@item.Quantity</span>
-                            <a class="btn btn-outline-success" href="/Cart/AddItem?pizzaId=@item.PizzaId&&redirect=1">+</a>
+                            <a id="Increase_Button" class="btn btn-outline-success" href="/Cart/AddItem?pizzaId=@item.PizzaId&&redirect=1">+</a>
                         </td>
                     </tr>
                 }
@@ -38,11 +49,17 @@
 
         <div class="text-end">
             <h4>Total: @Model.CartDetails.Sum(item => item.UnitPrice * item.Quantity).ToString("C2")</h4>
-            <a asp-action="Checkout" class="btn btn-success">Proceed to Checkout</a>
+            <a id="Clear_Cart_Button" asp-action="ClearCart" class="btn btn-danger">Empty Cart</a>
+            <a id="Checkout_Button" asp-action="Checkout" class="btn btn-success">Proceed to Checkout</a>
         </div>
     }
     else
     {
-        <p>Your shopping cart is empty.</p>
+        <p id="Cart_Empty_Message">Your shopping cart is empty.</p>
     }
+
+    <div class="d-flex justify-content-center">
+        <a id="Shop_More_Button" asp-controller="Home" asp-action="Index" class="btn btn-success">Shop More</a>
+    </div>
+
 </div>
