--- a/PizzaShop/Views/Shared/_LoginPartial.cshtml
+++ b/PizzaShop/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
 <ul class="navbar-nav">
 
     <li class="nav-item">
-        <a class="nav-link" href="/Cart/Index">
+        <a id="Cart" class="nav-link" href="/Cart/Index">
             <span id="cartCount" name="cartCount" class="badge rounded-pill text-bg-danger">0</span>
             <i class="bi bi-cart"></i>
         </a>
@@ -27,10 +27,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a id="Register_Link" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a id="Login_Link" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
 </ul>
